# mlx-lora-finetune

./: .gitignore  LICENSE  Makefile  README.md  lora_config.yaml  pyproject.toml
.github/workflows/: ci.yml
adapters/: adapter_config.json
data/: test.jsonl  train.jsonl  valid.jsonl
docs/superpowers/specs/: 2026-06-30-mlx-lora-extraction-design.md
results/: base.json  comparison.md  finetuned.json
src/mlx_lora_extraction/: __init__.py  eval.py  make_dataset.py  prompt.py  schema.py
tests/: test_dataset_and_eval.py
