[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-lora-extraction"
version = "0.1.0"
description = "LoRA fine-tuning of a 4-bit Qwen2.5 base on Apple MLX for freight-text -> JSON extraction, with an honest before/after benchmark."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mark Teji" }]
dependencies = [
    "mlx-lm>=0.31",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_lora_extraction"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
